cabal-version:      2.4
name:               HangmanWithMonads
version:            0.1.0.0

-- Hangman with Monads. User guesses a randomly selected word by entering only one char at a time.
-- User can attemp 7 wrong char to guess the word. 
author:             Aamer
maintainer:         aamerkareem@gmail.com

extra-source-files: CHANGELOG.md

executable HangmanWithMonads
    main-is:          Main.hs

    build-depends:   base ^>=4.14.3.0
                    , HangmanWithMonads
                    , transformers==0.5.6.2
                    , random==1.2.1
                    
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:    Prog
                      , Types  
                        
    build-depends:    base ^>=4.14.3.0
                    , transformers==0.5.6.2
                    , text==1.2.4.1
    hs-source-dirs:   src
    default-language: Haskell2010